crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaSessionRole_Initiator = 0,
  PamojaSessionRole_Responder = 1,
} PamojaSessionRole;
typedef enum {
  PamojaSlotState_Empty = 0,
  PamojaSlotState_Receiving = 1,
  PamojaSlotState_Staged = 2,
  PamojaSlotState_Pending = 3,
  PamojaSlotState_Confirmed = 4,
  PamojaSlotState_Failed = 5,
} PamojaSlotState;
typedef struct PamojaAgreementKey PamojaAgreementKey;
typedef struct PamojaAuditEntry PamojaAuditEntry;
typedef struct PamojaAuditLog PamojaAuditLog;
typedef struct PamojaAuditVerifier PamojaAuditVerifier;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaDeviceIdentity PamojaDeviceIdentity;
typedef struct PamojaImageVerifier PamojaImageVerifier;
typedef struct PamojaSession PamojaSession;
typedef struct PamojaUpdater PamojaUpdater;
typedef struct {
  uint64_t counter;
  uint8_t tag[PAMOJA_SESSION_TAG_LEN];
} PamojaSealed;
typedef struct {
  uint8_t structure_version;
  uint64_t sequence;
  uint8_t vendor_id[PAMOJA_UPDATE_ID_LEN];
  uint8_t class_id[PAMOJA_UPDATE_ID_LEN];
  uint8_t format;
  uint8_t storage;
  uint8_t digest[PAMOJA_UPDATE_DIGEST_LEN];
  uint32_t size;
  uint64_t expires;
} PamojaManifest;
typedef struct {
  uint64_t epoch;
  uint8_t release_key[PAMOJA_KEY_LEN];
  uint64_t expires;
} PamojaDelegation;
typedef struct {
  uint8_t vendor_id[PAMOJA_UPDATE_ID_LEN];
  uint8_t class_id[PAMOJA_UPDATE_ID_LEN];
  uint8_t anchor[PAMOJA_KEY_LEN];
} PamojaDevice;
typedef struct {
  PamojaSlotState state;
  uint64_t sequence;
  uint32_t size;
  uint8_t digest[PAMOJA_UPDATE_DIGEST_LEN];
  uint32_t written;
} PamojaSlotRecord;
PamojaAuditLog *pamoja_audit_log_new(const PamojaDeviceIdentity *identity);
PamojaAuditLog *pamoja_audit_log_resume(const PamojaDeviceIdentity *identity,
                                        const PamojaAuditEntry *last);
PamojaAuditEntry *pamoja_audit_log_append(PamojaAuditLog *log,
                                          const uint8_t *payload,
                                          uintptr_t payload_len);
void pamoja_audit_log_free(PamojaAuditLog *log);
PamojaAuditEntry *pamoja_audit_entry_from_bytes(const uint8_t *bytes, uintptr_t len);
PamojaBuffer *pamoja_audit_entry_to_bytes(const PamojaAuditEntry *entry);
uint64_t pamoja_audit_entry_index(const PamojaAuditEntry *entry);
PamojaStatus pamoja_audit_entry_previous(const PamojaAuditEntry *entry, uint8_t *out_previous);
PamojaStatus pamoja_audit_entry_digest(const PamojaAuditEntry *entry, uint8_t *out_digest);
PamojaStatus pamoja_audit_entry_signature(const PamojaAuditEntry *entry, uint8_t *out_signature);
PamojaBuffer *pamoja_audit_entry_payload(const PamojaAuditEntry *entry);
void pamoja_audit_entry_free(PamojaAuditEntry *entry);
PamojaAuditVerifier *pamoja_audit_verifier_new(const uint8_t *public_key);
PamojaStatus pamoja_audit_verifier_check(PamojaAuditVerifier *verifier,
                                         const PamojaAuditEntry *entry);
void pamoja_audit_verifier_free(PamojaAuditVerifier *verifier);
PamojaStatus pamoja_audit_verify_chain(const uint8_t *public_key,
                                       const PamojaAuditEntry *const *entries,
                                       uintptr_t count);
PamojaAgreementKey *pamoja_agreement_key_from_seed(const uint8_t *seed, uintptr_t seed_len);
PamojaStatus pamoja_agreement_key_public(const PamojaAgreementKey *key, uint8_t *out_public_key);
void pamoja_agreement_key_free(PamojaAgreementKey *key);
PamojaSession *pamoja_session_establish(const PamojaAgreementKey *local,
                                        const uint8_t *peer_public_key,
                                        const uint8_t *salt,
                                        uintptr_t salt_len,
                                        PamojaSessionRole role);
PamojaStatus pamoja_session_seal(PamojaSession *session,
                                 uint8_t *buf,
                                 uintptr_t len,
                                 const uint8_t *aad,
                                 uintptr_t aad_len,
                                 PamojaSealed *out_sealed);
PamojaStatus pamoja_session_open(PamojaSession *session,
                                 PamojaSealed sealed,
                                 uint8_t *buf,
                                 uintptr_t len,
                                 const uint8_t *aad,
                                 uintptr_t aad_len);
void pamoja_session_free(PamojaSession *session);
PamojaStatus pamoja_session_hmac_sha256(const uint8_t *key,
                                        uintptr_t key_len,
                                        const uint8_t *message,
                                        uintptr_t message_len,
                                        uint8_t *out_digest);
PamojaStatus pamoja_session_hkdf_sha256(const uint8_t *salt,
                                        uintptr_t salt_len,
                                        const uint8_t *ikm,
                                        uintptr_t ikm_len,
                                        const uint8_t *info,
                                        uintptr_t info_len,
                                        uint8_t *out,
                                        uintptr_t out_len);
PamojaBuffer *pamoja_manifest_encode(PamojaManifest manifest);
PamojaStatus pamoja_manifest_decode(const uint8_t *bytes,
                                    uintptr_t len,
                                    PamojaManifest *out_manifest);
PamojaBuffer *pamoja_manifest_sign(PamojaManifest manifest, const PamojaDeviceIdentity *author);
PamojaStatus pamoja_envelope_verify(const uint8_t *bytes,
                                    uintptr_t len,
                                    const uint8_t *public_key,
                                    PamojaManifest *out_manifest);
PamojaBuffer *pamoja_envelope_body(const uint8_t *bytes, uintptr_t len);
PamojaBuffer *pamoja_delegation_sign(PamojaDelegation delegation,
                                     const PamojaDeviceIdentity *anchor);
PamojaStatus pamoja_delegation_open(const uint8_t *bytes,
                                    uintptr_t len,
                                    const uint8_t *anchor_public_key,
                                    PamojaDelegation *out_delegation);
PamojaImageVerifier *pamoja_image_verifier_new(PamojaManifest manifest);
PamojaStatus pamoja_image_verifier_update(PamojaImageVerifier *verifier,
                                          const uint8_t *chunk,
                                          uintptr_t len);
PamojaStatus pamoja_image_verifier_finish(PamojaImageVerifier *verifier,
                                          uint32_t *out_size,
                                          uint8_t *out_digest);
void pamoja_image_verifier_free(PamojaImageVerifier *verifier);
PamojaUpdater *pamoja_updater_new(PamojaDevice device, uint8_t slot_count, uint32_t slot_capacity);
PamojaStatus pamoja_updater_adopt(PamojaUpdater *updater,
                                  const uint8_t *bytes,
                                  uintptr_t len,
                                  bool has_now,
                                  uint64_t now,
                                  PamojaDelegation *out_delegation);
bool pamoja_updater_delegation(const PamojaUpdater *updater, PamojaDelegation *out_delegation);
PamojaStatus pamoja_updater_installed_sequence(const PamojaUpdater *updater,
                                               uint64_t *out_sequence);
PamojaStatus pamoja_updater_slot_record(const PamojaUpdater *updater,
                                        uint8_t slot,
                                        PamojaSlotRecord *out_record);
uint8_t pamoja_updater_slot_count(const PamojaUpdater *updater);
PamojaStatus pamoja_updater_provision(PamojaUpdater *updater, uint8_t slot, uint64_t sequence);
PamojaStatus pamoja_updater_stage(PamojaUpdater *updater,
                                  const uint8_t *envelope,
                                  uintptr_t envelope_len,
                                  const uint8_t *image,
                                  uintptr_t image_len,
                                  bool has_now,
                                  uint64_t now,
                                  uint8_t *out_slot);